# cf-downloader

./: .gitignore  Cargo.toml  azure-pipelines.yaml  build.rs
src/: color.rs  main.rs  read.rs  write.rs
src/command/: problem.rs  session.rs
src/downloader/: account.rs  cache.rs  client.rs  config.rs  delay.rs  downloader.rs  email.rs  error.rs  judge.rs  lib.rs  random.rs  register.rs  submitter.rs  types.rs
src/downloader/cache/: storage.rs  submit.rs
src/downloader/client/: problem.rs  retry.rs  session.rs  submission.rs  verdict.rs
src/downloader/config/: retry.rs
src/downloader/downloader/: data.rs  meta.rs  meta_storage.rs
src/downloader/encoding/: gzip.rs  mod.rs  traits.rs  utility.rs
src/downloader/encoding/handlebars/: encode.rs  error.rs  meta.rs  mod.rs
src/downloader/judge/: error.rs  problem.rs  register.rs  retry.rs  search.rs  session.rs  submit.rs  verdict.rs
src/downloader/submitter/: error.rs  list.rs  session.rs  submit.rs
templates/handlebars/: Data.scala  Meta.scala  data.cs  meta.cs
