[package]
name = "cf-downloader"
version = "0.1.0"
authors = ["aplqo <aplqo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cf_downloader"
path = "./src/downloader/lib.rs"

[[bin]]
name = "cf-downloader"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
regex = "1.4.4"
futures = "0.3.13"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0.64"
handlebars = "3.5.3"
flate2 = "1.0"
base64 = "0.13.0" 